Adicionando novas rotas de cupons por turma e listar de alunos por turma
