# src/routes/adminRoutes.js
@@ -1,9 +1,10 @@
 const express = require('express');
-const { listStudents } = require('../controllers/adminController');
+const { listStudents, listStudentsByClass } = require('../controllers/adminController');
 const { authenticateJWT, isAdmin } = require('../middleware/auth');
 
 const router = express.Router();
 
 router.get('/students', authenticateJWT, isAdmin, listStudents);
+router.get('/students/class/:classId', authenticateJWT, isAdmin, listStudentsByClass);
 
 module.exports = router;
